--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.mindrot:jbcrypt:0.4'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4' 
 }
 
 tasks.named('test') {
